--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,10 @@ label.item.quantity=수량
 page.items=상품 목록
 page.item=상품 상세
 page.addItem=상품 등록
+page.insertItem=상품 입력
 page.updateItem=상품 수정
 button.save=저장
 button.cancel=취소
+placeholder.itemName=이름을 입력하세요
+placeholder.price=가격을 입력하세요
+placeholder.quantity=수량을 입력하세요
