--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -6,6 +6,10 @@ label.item.quantity=quantity
 page.items=Item List
 page.item=Item Detail
 page.addItem=Item Add
+page.insertItem=Add
 page.updateItem=Item Update
 button.save=Save
 button.cancel=Cancel
+placeholder.itemName=set name
+placeholder.price=set price
+placeholder.quantity=set quantity
